# Chat-With-PDF

./: README.md  backend.py  chatbot.py  main.py  pyproject.toml  requirements.txt
static/: frontend.html
